# OSN-public

./: .gitignore  README.md  pyproject.toml  requirements.txt
OSN_common/: constants.py  data_loading.py  helpers.py  logger.py  nacitanie_dat.py  paths.py  poistovne.py  poistovne_tools.py  pomocne_funkcie.py  prilohy_tools.py  types.py
OSN_common/data/: poistovne.json  poistovne_loading_args.json
postprocessing/: TEMPLATE_pocet_MS_na_uroven_programu_iba_hlavne_2023_v2024.2.xlsx  postprocessing.ipynb
preprocessing/: README.md  data_loading.py  preprocessing.ipynb  schema_validation.ipynb  schema_validation.py
preprocessing/Inputs/: KÓDY_OBCE.xlsx  psc_na_zuj.csv  pzs_12_prevodnik.csv
vyhodnotenie_siete/: podmienky_pre_tvorbu_siete.py  vyhodnotenie_siete.ipynb
vyhodnotenie_siete/dojazdova_matica/: dojazdova_matica.csv  dojazdova_matica_s_nazvami.xlsx
vyhodnotenie_siete/kandidatske_siete/: kandidatska_siet_Brezno.xlsx  kandidatska_siet_Galanta.xlsx  kandidatska_siet_Ilava.xlsx  kandidatska_siet_Liptovsky_Mikulas.xlsx  kandidatska_siet_Liptovsky_Mikulas_Brezno.xlsx  kandidatska_siet_Lucenec_III.xlsx  kandidatska_siet_Revuca.xlsx  kandidatska_siet_Rimavska_Sobota_III.xlsx  kandidatska_siet_Snina.xlsx
vyhodnotenie_siete/lozka/: minimálny počet lôžok.xlsx  pocty_lozok_2023.xlsx
vyhodnotenie_siete/personalne_zabezpecenie/: Sumar_dotazniky_1_kolo_2022.xlsx  priloha_3_personal.xlsx
