[project]
name = "OSN_common"
version = "0.1.0"
description = "Common scripts and functions for Slovak hospital reform OSN"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# enable flake8-bugbear ("B") and flake8-quotes ("Q")
# enable Ruff's isort rules by "I"
extend-select = ["B", "Q", "I"]

[tool.ruff.format]
# indent with spaces, rather than tabs
indent-style = "space"

# respect magic trailing commas
skip-magic-trailing-comma = false

# automatically detect the appropriate line ending
line-ending = "auto"