[project]
name = "OSN_common"
version = "0.1.0"
description = "Common scripts and functions for Slovak hospital reform OSN"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]

# ignore specific rules - check more on https://docs.astral.sh/ruff/rules/<code>
ignore = ["D205", "D400", "D401", "D415", "EM101", "FIX002", "G004", "PD011", "PD901", "PLR0911", "PLR2004", "RUF012", "TD002", "TD003"]

# disable on-save auto-removal of unused imports
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
# ignore long lines in constants (long texts)
"constants.py" = ["E501"]

# ignore missing docstrings in wrappers
"logger.py" = ["D102"]

[tool.ruff.format]
# indent with spaces, rather than tabs
indent-style = "space"