[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "OSN_common"
version = "2025.1"
description = "Common scripts and functions for Slovak hospital reform OSN"
requires-python = ">=3.11"
dependencies = [
    "colorlog~=6.9",
    "frozendict~=2.4",
    "frozenlist~=1.5",
    "openpyxl~=3.1",
    "pandas~=2.2",
    "ruff~=0.11",
    "tqdm~=4.67",
    "XlsxWriter~=3.2",
]

[tool.hatch.build]
packages = ["OSN_common"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]

# ignore specific rules - check more on https://docs.astral.sh/ruff/rules/<code>
ignore = ["COM812", "D205", "D400", "D401", "D415", "EM101", "EM102", "FIX002", "G004", "PD011", "PD901", "PLR2004", "PLW2901", "RUF001", "TD002", "TD003", "TRY003"]

# disable on-save auto-removal of unused imports
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
# ignore long lines in constants (long texts) and mutable objects (we make them immutable by custom types)
"constants.py" = ["E501", "RUF012"]

# ignore missing docstrings in wrappers
"logger.py" = ["D102"]

[tool.ruff.format]
# indent with spaces, rather than tabs
indent-style = "space"